# orgjournal-mcp

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.claude/: README.md  implementation-plan.md
.claude/completed/: 2026-01-04-docstring-translation.md  2026-01-04-initial-implementation.md
.github/workflows/: test.yml
src/orgjournal_mcp/: __init__.py  __main__.py  config.py  converter.py  server.py
tests/: conftest.py  test_config.py  test_converter.py  test_server.py
tests/fixtures/: empty_journal.org  sample_journal_2024-12.org  sample_journal_2025-01.org
