[project]
name = "orgjournal-mcp"
version = "0.1.0"
description = "MCP server for accessing Org-mode journal files"
readme = "README.md"
authors = [
    { name = "u-yuta", email = "u-yuta@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "orgparse>=0.4.20251020",
    "mcp>=1.1.2",
]

[project.scripts]
orgjournal-mcp = "orgjournal_mcp:main"

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
