[project]
name = "orgjournal-mcp"
version = "0.1.0"
description = "MCP server for accessing Org-mode journal files"
readme = "README.md"
authors = [
    { name = "u-yuta", email = "u-yuta@users.noreply.github.com" }
]
requires-python = ">=3.14"
dependencies = [
    "orgparse>=0.4.20251020",
    "mcp>=1.1.2",
    "python-dotenv>=1.0.0",
]

[project.scripts]
orgjournal-mcp = "orgjournal_mcp:main"

[dependency-groups]
dev = [
    "pytest>=8.3.4",
    "pytest-cov>=6.0.0",
    "pytest-asyncio>=0.24.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--cov=src/orgjournal_mcp",
    "--cov-report=term-missing",
    "--cov-report=html",
]

[tool.coverage.run]
source = ["src/orgjournal_mcp"]
omit = ["tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]

[build-system]
requires = ["uv_build>=0.9.21,<0.10.0"]
build-backend = "uv_build"
